# tg8chan

./: .env  Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
